--- a/Notes/basic/01.Main Concepts.md
+++ b/Notes/basic/01.Main Concepts.md
@@ -180,3 +180,25 @@ this.setState((prevState, props) => ({
 This is commonly called a “top-down” or “unidirectional” data flow. Any state is always owned by some specific component, and any data or UI derived from that state can only affect components “below” them in the tree. <br>
 
 
+## Handling Events
+Handling events with React is very similar to handling events on DOM elements. There are some syntactic difference:
+- React events are named using camelCase, rather than lowercase.
+- With JSX you pass a function as the event handler, rather than a string.
+- Another difference is that you cannot return false to prevent default behavior in React. You must call preventDefault explicitly.
+
+```javascript
+function ActionClick () {
+  function handleClick (e) {
+    e.preventDefault()
+    console.log('The click was clicked!')
+  }
+
+  return (
+    // this will be undefined withouth bind declaration
+    <a href="#" onClick={handleClick.bind(this)}>Click me </a>
+  )
+}
+```
+Here, *e* is a synthetic event. React defines these synthetic events according to the W3C spec, so you don’t need to worry about cross-browser compatibility. See the <a href="https://reactjs.org/docs/events.html">SyntheticEvent</a> reference guide to learn more.</br>
+
+A fully example is <a href="../../src/components/Clock/index.js"> Clock Component</a>
