--- a/Notes/basic/01.Main Concepts.md
+++ b/Notes/basic/01.Main Concepts.md
@@ -1,9 +1,13 @@
+# Main Concept
+
 ## JSX
+
 JSX is javascript sugar for react. It is recommended being used in React to describe what the UI should look like.
-JSX may remind you of template languate, but **it comes with the full power of javascript** <br>
-JSX produces React 'element'. <br>
+JSX may remind you of template languate, but **it comes with the full power of javascript**.
+JSX produces React 'element'.
 
 ### Embedding Expressions in JSX
+
 ```javascript
 const name = 'Josh'
 const element = <h1>Hello, {name}</h1>
@@ -12,14 +16,17 @@ ReactDOM.render(
   document.getElementById('app')
 )
 ```
-You can put any valid JavaScript expression inside the curly braces in JSX.<br>
+
+You can put any valid JavaScript expression inside the curly braces in JSX.
 
 ### JS is an Expression Too
 
 ### Specifying Attributes with JSX
 
 ### Specifying Children with JSX
+
 JSX tag may contain children:
+
 ```javascript
 const element = (
   <div>
@@ -30,9 +37,11 @@ const element = (
 ```
 
 ### JSX Represents Objects
-Babel compiles JSX down to React.createElement() calls.<br>
+
+Babel compiles JSX down to React.createElement() calls.
 
 These two are indentical:
+
 ```javascript
 const element = (
   <h1 className="greeting">
@@ -49,18 +58,20 @@ const element = React.createElement(
 )
 ```
 
-
 ## Rendering an Element into the DOM
+
 ```javascript
 import ReactDOM from 'react-dom'
 const ele = <h1>Hello, world<h1>
 ReactDOM.render(ele, document.getElementById('root'))
 ```
 
-
 ## Components and Props
+
 ### Functional and class Components
-The simplest way to define a component is to write a JavaScript function:<br>
+
+The simplest way to define a component is to write a JavaScript function:
+
 ```javascript
 function Welcome (props) {
   return (
@@ -68,9 +79,11 @@ function Welcome (props) {
   )
 }
 ```
-This function is a valid React component because it accepts a single “props” (which stands for properties) object argument with data and returns a React element. We call such components “functional” because they are literally JavaScript functions.<br>
+
+This function is a valid React component because it accepts a single “props” (which stands for properties) object argument with data and returns a React element. We call such components “functional” because they are literally JavaScript functions.
 
 You can also use an **ES6 class** to define a component:
+
 ```javascript
 class Welcome extends React.Component {
   render () {
@@ -78,9 +91,11 @@ class Welcome extends React.Component {
   }
 }
 ```
-The above two components are equivalent from React’s point of view.<br>
+
+The above two components are equivalent from React’s point of view.
 
 ### Rendering a Component
+
 ```javascript
 function Welcome(props) {
   return <h1>Hello, {props.name}</h1>;
@@ -92,23 +107,29 @@ ReactDOM.render(
   document.getElementById('root')
 )
 ```
+
 The render method will be called each time an update happen.
 
 ### Composing Components
 
 ### Extracting Components
-** DRY ** principle for create a component. <br>
+
+**DRY** principle for create a component.
 
 ### Props are Read-Only
+
 Consider this *sum* function:
+
 ```javascript
 function sum (a, b) {
   return a + b
 }
 ```
-Such functions are called “pure” because they do not attempt to change their inputs, and always return the same result for the same inputs.<br>
+
+Such functions are called “pure” because they do not attempt to change their inputs, and always return the same result for the same inputs.
 
 In contrast, this function is impure because it changes its own input:
+
 ```javascript
 function withdraw (account, amount) {
   account.amount -= amount
@@ -118,11 +139,11 @@ function withdraw (account, amount) {
 React is pretty flexible but it has a single strict rule:
 **All React components must act like pure functions with respect to their props.*
 
-
 ## State and Lifecycle
-State is similar to props, but it is private and fully controlled by the component.<br>
 
-The differences bettween a pure function component and a **ES6** class component is that a function component doest not have state. <br>
+State is similar to props, but it is private and fully controlled by the component.
+
+The differences bettween a pure function component and a **ES6** class component is that a function component doest not have state.
 
 ```javascript
 import React, { Component } from 'react'
@@ -151,9 +172,10 @@ export default Tick
 ```
 
 ### Adding Lifecycle Methods to a Class
-The **componentDidMount()** hook runs after the component output has been rendered to the DOM.<br>
 
-In react, we use **this.setState()** to update a local state for a component.<br>
+The **componentDidMount()** hook runs after the component output has been rendered to the DOM.
+
+In react, we use **this.setState()** to update a local state for a component.
 
 If the a component is ever removed from the DOM, React calls the **componentWillUnmount()** lifecycle hook so the timer is stopped.
 
@@ -162,26 +184,31 @@ If the a component is ever removed from the DOM, React calls the **componentWill
 #### Update state by **setState**
 
 #### State Updates May Be Asynchronous
-React may batch multiple setState() calls into a single update for performance.<br>
 
-Because this.props and this.state may be updated asynchronously, you should not rely on their values for calculating the next state.<br>
+React may batch multiple setState() calls into a single update for performance.
+
+Because this.props and this.state may be updated asynchronously, you should not rely on their values for calculating the next state.
 
 Solution:
+
 ```javascript
 this.setState((prevState, props) => ({
   counter: prevState.counter + props.increment
 }));
 ```
+
 **setState** function accepts a function rather than an object.
 
 ### State Updates are Merged
 
 ### The Data Flows Down
-This is commonly called a “top-down” or “unidirectional” data flow. Any state is always owned by some specific component, and any data or UI derived from that state can only affect components “below” them in the tree. <br>
 
+This is commonly called a “top-down” or “unidirectional” data flow. Any state is always owned by some specific component, and any data or UI derived from that state can only affect components “below” them in the tree.
 
 ## Handling Events
+
 Handling events with React is very similar to handling events on DOM elements. There are some syntactic difference:
+
 - React events are named using camelCase, rather than lowercase.
 - With JSX you pass a function as the event handler, rather than a string.
 - Another difference is that you cannot return false to prevent default behavior in React. You must call preventDefault explicitly.
@@ -199,6 +226,77 @@ function ActionClick () {
   )
 }
 ```
+
 Here, *e* is a synthetic event. React defines these synthetic events according to the W3C spec, so you don’t need to worry about cross-browser compatibility. See the <a href="https://reactjs.org/docs/events.html">SyntheticEvent</a> reference guide to learn more.</br>
 
 A fully example is <a href="../../src/components/Clock/index.js"> Clock Component</a>
+
+## Conditional Rendering
+
+```javascript
+function Greeting (props) {
+  const isLoggedIn = props.isLoggedIn
+  if (isLoggedIn) {
+    return <UserGretting>
+  }
+  return GuestGreeting
+}
+
+ReactDOM.render(
+  <Greeting isLoggedIn={false} />
+  document.getElementById('root)
+)
+```
+
+### Preventing Component from Rendering
+
+In rare cases you might want a component to hide itself event though it was rendered by another component. To do this return **null** instead of its render output.
+
+```javascript
+function WarningBanner (props) {
+  if (props.warn) {
+    return null
+  }
+  return (
+    <div className="warn">
+      {this.props.warn}
+    </div>
+  )
+}
+```
+
+## Lists and keys
+
+### Rendering Multiple Components
+
+### Keys
+
+Keys help React identify which items have changed, are added, or are removed. **Keys should be given to the elements inside the array to give the elements a stable identity:**
+
+```javascript
+class ShoppingList extends Component {
+  render () {
+    const items = this.props.items || []
+    const ListItems = items.map((item, index) => {
+      return (
+        // Dont use index as a key. Not recomended. This can negatively impact in performance and may cause issues with component state.
+        <li key={item.name} className="list-item">
+        <ShoppingItem name={item.name} amount={item.amount}/>
+        </li>
+      )
+    })
+
+    return (
+      <div className="shoping-list-wrapper">
+        <ul className="shopping-list">
+          {ListItems}
+        </ul>
+      </div>
+    )
+  }
+}
+```
+
+**Dont use index as a key. Not recomende. This can negatively impact in performance and may cause issues with component state.**
+
+Here is an in-depth explanation about <a href="https://reactjs.org/docs/reconciliation.html#recursing-on-children">why keys are necessary</a>   if you’re interested in learning more.
