Recomand using composition in React

--- a/Notes/basic/01.Main Concepts.md
+++ b/Notes/basic/01.Main Concepts.md
@@ -300,3 +300,66 @@ class ShoppingList extends Component {
 **Dont use index as a key. Not recomende. This can negatively impact in performance and may cause issues with component state.**
 
 Here is an in-depth explanation about <a href="https://reactjs.org/docs/reconciliation.html#recursing-on-children">why keys are necessary</a>   if you’re interested in learning more.
+
+## Forms
+
+## Lifting State Up
+
+## Composition vs Inheritance
+
+React has a powerful composition model, and we **recommend using composition** instead of inheritance to reuse code between components.
+
+### Containment
+
+- this.props.children
+
+```javascript
+const Wrapper = (props) => {
+  return (
+    <div className="wrapper">
+      {this.props.children}
+    </div>
+  )
+}
+```
+
+- props
+
+Both ***Contacts*** and ***Chat** here are object. So we can pass then to children component as a props's property.
+
+```javascript
+function SplitPanel(props) {
+  return (
+    <div className="SplitPane">
+      <div className="SplitPane-left">
+        {props.left}
+      </div>
+      <div className="SplitPane-right">
+        {props.right}
+      </div>
+    </div>
+  )
+}
+
+function App() {
+  return (
+    <SplitPanel
+      left={
+        <Contacts />
+      }
+      right={
+        <Chat />
+      } />
+  )
+}
+```
+
+### Specialization
+
+Sometimes we think about components as being “special cases” of other components. For example, we might say that a ***WelcomeDialog*** is a special case of ***Dialog**.
+
+### So what about inheritance
+
+At Facebook, we use React in thousands of components, and we haven’t found any use cases where we would recommend creating component inheritance hierarchies.
+
+If you want to reuse non-UI functionality between components, we suggest extracting it into a separate JavaScript module. The components may import it and use that function, object, or a class, without extending it.
