--- a/Notes/basic/01.Main Concepts.md
+++ b/Notes/basic/01.Main Concepts.md
@@ -363,3 +363,11 @@ Sometimes we think about components as being “special cases” of other compon
 At Facebook, we use React in thousands of components, and we haven’t found any use cases where we would recommend creating component inheritance hierarchies.
 
 If you want to reuse non-UI functionality between components, we suggest extracting it into a separate JavaScript module. The components may import it and use that function, object, or a class, without extending it.
+
+## Thinkging in React
+
+In this chapter, we’ll walk you through the thought process of building a searchable product data table using React.
+
+The **single responsibility principle**, that is, **a component should ideally do one thing**. If it ends up with growing, it should be decomponposed into smaller subcomponents. (https://en.wikipedia.org/wiki/Single_responsibility_principle)
+
+An detailed example is here: https://reactjs.org/docs/thinking-in-react.html
