--- a/Notes/React/02.Advanced Guides.md
+++ b/Notes/React/02.Advanced Guides.md
@@ -79,3 +79,88 @@ A demo code for **Context** usage can be find at <a href="../../src/components/C
 ```javascript
 const { Provider, Consumer } = React.CreateContext(defaultValue)
 ```
+
+## Code spnitting
+
+Bundling is great, but as your app grows, your bundle will grow too.
+
+### import
+
+The best way to introduce code-splitting into your app is through the dynamic import() syntax.
+
+Before:
+
+```javascript
+import { add } from './math'
+
+console.log(add(16, 26))
+
+```
+
+After:
+
+```javascript
+import("./math").then(math => {
+  console.log(math.add(16, 26));
+})
+```
+
+When Webpack comes across this syntax, it automatically starts code-splitting your app.
+If you’re using Create React App, this is already configured for you and you can start using it immediately.
+
+### Libraries
+
+<a href="https://github.com/jamiebuilds/react-loadable">React Loadable</a> wraps dynamic imports in a nice, React-friendly API for introducing code splitting into your app at a given component.
+
+Before:
+
+```javascript
+import OtherComponent from './OtherComponent'
+
+const MyComponent = () => (
+  <OtherComponent/>
+)
+```
+
+After:
+
+```javascript
+import Loadable from 'react-loadable';
+
+const LoadableOtherComponent = Loadable({
+  loader: () => import('./OtherComponent'),
+  loading: () => <div>Loading...</div>,
+});
+
+const MyComponent = () => (
+  <LoadableOtherComponent/>
+)
+```
+
+### Route-based code splitting
+
+```javascript
+import { BrowserRouter as Router, Route, Switch } from 'react-router-dom'
+import Loadable from 'react-loadable'
+
+const Loading = () => <div>Loading...</div>
+
+const Home = Loadable({
+  loader: () => import('./routes/Home'),
+  loading: Loading,
+})
+
+const About = Loadable({
+  loader: () => import('./routes/About'),
+  loading: Loading,
+})
+
+const App = () => (
+  <Router>
+    <Switch>
+      <Route exact path="/" component={Home}/>
+      <Route path="/about" component={About}/>
+    </Switch>
+  </Router>
+)
+```
