move markdown file to includes directory

--- a/Notes/React/includes/markdown/02.Advanced Guides.md
+++ b/Notes/React/includes/markdown/02.Advanced Guides.md
@@ -164,3 +164,92 @@ const App = () => (
   </Router>
 )
 ```
+
+## Optimizing Performance
+
+### Use the Production Build
+
+## Typechecking with PropTypes
+
+### Type checking
+
+```javascript
+import PropTypes from 'prop-types'
+class MyComponent extends React.Component {
+  render() {
+    // This must be exactly one element or it will warn.
+    const children = this.props.children;
+    return (
+      <div>
+        {children}
+      </div>
+    );
+  }
+}
+
+MyComponent.propTypes = {
+  children: PropTypes.element.isRequired
+}
+```
+
+### Default Prop Values
+
+```javascript
+class Greeting extends React.Component {
+  render() {
+    return (
+      <h1>Hello, {this.props.name}</h1>
+    );
+  }
+}
+
+Greeting.defaultProps = {
+  name: 'Stranger'
+}
+
+ReactDOM.render(
+  <Greeting />,
+  document.getElementById('example')
+)
+```
+
+## API reference
+
+
+### Overview
+
+
+## Refs and the DOM
+
+**Refs provide a way to access DOM nodes or React elements created in the render method.**
+
+### When to Use Refs
+
+Avoid using refs for anything that can be done declaratively.
+
+For example, instead of exposing open() and close() methods on a Dialog component, pass an isOpen prop to it.
+
+### Create a Ref
+
+```javascript
+class MyForm extends React.Component {
+  constructor (props) {
+    super(props)
+    this.emailInput = React.createRef()
+  }
+
+  render () {
+    return (
+      <div>
+        <input type="text" name="email" ref={this.emailInput}/>
+      </div>
+    )
+  }
+}
+```
+
+### Access Ref
+
+```javascript
+const node = this.myRef.current
+```
