--- a/Notes/React/includes/markdown/01.Main Concepts.md
+++ b/Notes/React/includes/markdown/01.Main Concepts.md
@@ -162,7 +162,7 @@ class Tick extends Component {
     return (
       <div className="Tick">
         <h1>Hello, world!</h1>
-        <h2>It's {this.state.date.toLocaleTimeString()}</h2>
+        <h2>`It's ${this.state.date.toLocaleTimeString()}` </h2>
       </div>
     )
   }
@@ -244,7 +244,7 @@ function Greeting (props) {
 
 ReactDOM.render(
   <Greeting isLoggedIn={false} />
-  document.getElementById('root)
+  document.getElementById('root')
 )
 ```
 
