--- a/Notes/React/includes/markdown/03.API Reference.md
+++ b/Notes/React/includes/markdown/03.API Reference.md
@@ -25,6 +25,8 @@ Normally you should try to avoid all uses of forceUpdate() and only read from th
 
 ## ReactDOM
 
+https://reactjs.org/docs/react-dom.html
+
 **The react-dom package provides DOM-specific methods** that can be used at the top level of your app and as an escape hatch to get outside of the React model if you need to.
 Most of your components should not need to use this module.
 
@@ -57,9 +59,27 @@ ReactDOM.findDOMNode(component)
 
 ## ReactDOMServer
 
+https://reactjs.org/docs/react-dom-server.html
+
 **The ReactDOMServer object enables you to render components to static markup. Typically, it’s used on a Node server:**
 
 ```javascript
 import ReactDOMServer from 'react-dom/server';
 var ReactDOMServer = require('react-dom/server');
 ```
+
+The following methods can be used in both the server and browser enviroment:
+
+- renderToString()
+- renderToStaticMarkup()
+- renderToNodeStream
+
+## DOM Element
+
+**React implements a browser-independent DOM system for performance and cross-browser compatibility.**
+
+## SyntheticEven
+
+- onTransitionEnd
+
+- Adnimation event
