--- a/Notes/React/includes/markdown/04.HowToTestReact.md
+++ b/Notes/React/includes/markdown/04.HowToTestReact.md
@@ -43,3 +43,49 @@ function shallowRender(Component) {
 ```
 
 The full code is <a href="../../../../src/test/01.demo"> here</a>
+
+- shallowRenderer.render()
+
+**shallowRenderer.render()** is similar to ReactDOM.render() but it doesn’t require DOM and only renders a single level deep. This means you can test components isolated from how their children are implemented.
+
+- getRenderOutput
+
+After **shallowRenderer.render()** has been called, you can use shallowRenderer.getRenderOutput() to get the shallowly rendered output.
+
+### Test Renderer
+
+```javascript
+import TestRenderer from 'react-test-renderer'
+```
+
+**This package provides a React renderer that can be used to render React components to pure JavaScript objects**, without depending on the DOM or a native mobile environment.
+
+- FindByType
+
+**Find a single descendant test instance with the provided type.**
+
+### Javascript Enviroment Requirements
+
+**React 16 depends on the collection types Map and Set.**  If you support older browsers and devices which may not yet provide these natively (e.g. IE < 11) or which have non-compliant implementations (e.g. IE 11), consider including a global polyfill in your bundled application, such as core-js or babel-polyfill.
+
+**A polyfilled environment for React 16 using core-js to support older browsers** might look like:
+
+```javascript
+import 'core-js/es6/map'
+import 'core-js/es6/set'
+
+import React from 'react'
+import ReactDOM from 'react-dom'
+
+ReactDOM.render(
+  <h1>Hello, world!</h1>,
+  document.getElementById('root')
+)
+```
+
+React also depends on requestAnimationFrame (even in test environments).
+You can use the raf package to shim requestAnimationFrame:
+
+```javascript
+import 'raf/polyfill'
+```
