--- a/Notes/React-Router/01.Quick Start.md
+++ b/Notes/React-Router/01.Quick Start.md
@@ -21,15 +21,15 @@ For Memrory routing, the url of browser won't change.
 
 ## Resource configuration and organization based routing
 
-- 实现业务逻辑的松耦合
-- 易于扩展, 重构和维护
-- 路由层面实现 Lazy Load
+- less coupling for bussiness logical
+- easy to maintain, refactor and maintain
+- lazy load from router later
 
 ## Core API for React-Router
 
 - Link: ordinary link, won't trigger browser refresh
 
-- NavLink: smilar to link but will add selected status for current link
+- NavLink: similar to link but will add selected status for current link
 
 ```javascript
 function Menu (props) {
@@ -47,7 +47,7 @@ function Menu (props) {
 }
 ```
 
-- Prompt: notify user leave or not when condition satisfied
+- Prompt: notify user leave or stay when condition satisfied
 
 ```javascript
 import { Prompt } from  'react-router'
@@ -72,7 +72,7 @@ import { Route, Redirect } from 'react-router'
 }>
 ```
 
-- Route: container for render matched component of router
+- Route: container to render matched component
 
 ```javascript
 <Router>
@@ -115,6 +115,7 @@ import { Route, Redirect } from 'react-router'
 ## How to pass params
 
 The React-Router path grammar comes comes from https://github.com/pillarjs/path-to-regexp
+All the information relate to Reac-router are encapsulated on props on **Route** component.
 
 ```javascript
 // How to get params
@@ -137,6 +138,7 @@ function TopicList (props) {
       </li>
     )
   })
+
   return (
     <div className="available-topic">
       <ul>
@@ -149,4 +151,8 @@ function TopicList (props) {
 
 ## When to use url params
 
+Url means resource path.
+
 ## Nested Route
+
+A demo about Netested Route is [demo02](../../src/examples/react-router/demo02)
