Link, NavLink, Switch, Redirect

--- a/Notes/React-Router/includes/02.ComponentsInReactRouter.md
+++ b/Notes/React-Router/includes/02.ComponentsInReactRouter.md
@@ -54,3 +54,19 @@ Any path that could be resolve by [path-to-regexp](https://github.com/pillarjs/p
 
 A **Route** without setting a **path** or been wrapped by **Switch** component, it will always be matched.
 Find an example? please click [examples/react-router/demo05](../../../src/examples/react-router/demo05/index.js).
+
+## 3. Link
+
+[https://reacttraining.com/react-router/web/api/Link](https://reacttraining.com/react-router/web/api/Link)
+
+## 4. NavLink
+
+[https://reacttraining.com/react-router/web/api/NavLink](https://reacttraining.com/react-router/web/api/NavLink)
+
+## 5. Switch
+
+[https://reacttraining.com/react-router/web/api/Switch](https://reacttraining.com/react-router/web/api/Switch)
+
+### 6. Redirect
+
+[https://reacttraining.com/react-router/web/api/Redirect](https://reacttraining.com/react-router/web/api/Redirect)
