--- a/Notes/React/includes/markdown/02.AdvancedGuides.md
+++ b/Notes/React/includes/markdown/02.AdvancedGuides.md
@@ -213,6 +213,25 @@ ReactDOM.render(
 )
 ```
 
+## High Oder Component
+
+Two ways for component reusing in **React** programming.
+
+- A function used as a child component
+- Hight Order Component
+
+Concretely, **a higher-order component is a function that takes a component and returns a new component.**
+
+```javascript
+const EnhancedComponent = higherOrderComponent(WrappedComponent)
+```
+
+Whereas a component transforms props into UI, a higher-order component transforms a component into another component.
+
+HOC components provides bussiness logical to child compnent and it should  not have UI properties.
+
+A detailed demo and explaination pleas go to (https://time.geekbang.org/course/detail/100-9442)[https://time.geekbang.org/course/detail/100-9442]
+
 ## API reference
 
 
