A function works as this.props.children

--- a/Notes/React/includes/markdown/02.AdvancedGuides.md
+++ b/Notes/React/includes/markdown/02.AdvancedGuides.md
@@ -213,14 +213,49 @@ ReactDOM.render(
 )
 ```
 
-## High Oder Component
+## React Component design pattern
 
 Two ways for component reusing in **React** programming.
 
-- A function used as a child component
-- Hight Order Component
+### A function used as a child component
+
+*MyComponent**'s defination:
+
+```javascript
+class MyComponent extends React.Component {
+  render () {
+    return (
+      <div>
+        {this.props.children('A function used as cihld component')}
+      </div>
+    )
+  }
+}
+```
+
+Usage of *MyComponent**
+
+```javascript
+<MyComponent>
+  {
+    (name) => (
+      <p className="author-desc">{name}</p>
+    )
+  }
+</MyComponent>
+```
+
+In the above example, the children of *MyComponent&* is a function but not a React Component.
+
+The parent component determines how to utilize the props passed from parent Component.
+
+A detailed demo and explaination pleas go to (https://time.geekbang.org/course/detail/100-9442)[https://time.geekbang.org/course/detail/100-9442].
+
+### Hight Order Component
 
 Concretely, **a higher-order component is a function that takes a component and returns a new component.**
+
+They adavatage of passing a function as a children into a Component is, the contorl of how to uitilize child component.
 
 ```javascript
 const EnhancedComponent = higherOrderComponent(WrappedComponent)
