--- a/Notes/React/includes/markdown/02.AdvancedGuides.md
+++ b/Notes/React/includes/markdown/02.AdvancedGuides.md
@@ -4,11 +4,11 @@
 
 ## Code-Splitting
 
-## Context
+## 3. Context
 
-**Context provides a way to pass data through the component tree without having to pass props down manually at every level.**
+**Context provides a way to pass data through the component tree without having to pass props down manually at every level. It is designed to share data that can be considered "global" for a tree of React components.**
 
-In the following code example, we need to pass props from top(ToolBar) to child(ThemedButton) and child's child(Button). This is cumbersome.
+In the following example, we need to pass props from the top(ToolBar) to child(ThemedButton) and child's child(Button), which is cumbersome.
 
 ```javascript
 class App extends React.Component {
@@ -28,7 +28,7 @@ class App extends React.Component {
 }
 ```
 
-Using **Context**, we can avoid passing props through intermediate elements:
+By using **Context**, we can avoid passing props through intermediate elements:
 
 ```javascript
 const ThemeContext = React.createContext('light');
@@ -60,25 +60,41 @@ function ThemedButton(props) {
 }
 ```
 
-### When to Use Context
+### 3.1 When to Use Context
 
-**Context is designed to share data that can be considered “global” for a tree of React components**.
-
-A demo code for **Context** usage can be find at <a href="../../src/components/Context/index.js">demo</a>.
-
-### Before You Use Context
+### 3.1.1 Before You Use Context
 
 **Context** is primarily used when some data needs to be accessible by many components at different nesting levels. Apply it sparingly because it makes component reuse more diffcult.
 
 **If you only want to avoid passing some props through many levels, component composition is often a simpler solution than context.**.
 
-### API
+### 3.2 API of **Context**
 
-#### React.createContext
+#### 3.2.1 React.createContext
 
 ```javascript
 const { Provider, Consumer } = React.CreateContext(defaultValue)
 ```
+
+```javascript
+<Provider value={'some value'}></Provider>
+```
+
+The **Provider** accepts a *value* prop to be passed to Consumers that are descendants of it.
+
+```javascript
+<Consumer>
+  {
+    value => {
+      // do somthing with the value accepted from Provider of it.
+    }
+  }
+</Consumer>
+```
+
+### 3.3 Consuming Context with a Hoc
+
+### 3.4 Forwarding Refs to Context Consumers
 
 ## Code spnitting
 
