propType another form

--- a/Notes/React/includes/markdown/02.AdvancedGuides.md
+++ b/Notes/React/includes/markdown/02.AdvancedGuides.md
@@ -229,13 +229,27 @@ ReactDOM.render(
 )
 ```
 
+For the demo of propTypes above, we can write it in the following form as well:
+
+```javascript
+class Greeting extends React.Component {
+  static propTypes = {}
+  static defaultTypes = {}
+  render() {
+    return (
+      <h1>Hello, {this.props.name}</h1>
+    );
+  }
+}
+```
+
 ## React Component design pattern
 
 Two ways for component reusing in **React** programming.
 
 ### A function used as a child component
 
-*MyComponent**'s defination:
+*MyComponent*'s defination:
 
 ```javascript
 class MyComponent extends React.Component {
@@ -261,7 +275,7 @@ Usage of *MyComponent**
 </MyComponent>
 ```
 
-In the above example, the children of *MyComponent&* is a function but not a React Component.
+In the above example, the children of *MyComponent* is a function but not a React Component.
 
 The parent component determines how to utilize the props passed from parent Component.
 
