how virtual dom works

--- a/Notes/React/includes/markdown/01.MainConcepts.md
+++ b/Notes/React/includes/markdown/01.MainConcepts.md
@@ -205,6 +205,14 @@ this.setState((prevState, props) => ({
 
 This is commonly called a “top-down” or “unidirectional” data flow. Any state is always owned by some specific component, and any data or UI derived from that state can only affect components “below” them in the tree.
 
+## Understanding virtual dom and key property
+
+### How virtual dom works
+
+**Virtual dom** is the operation basic for JSx. For react component, it has a virtual dom which maps to real dom. Whenever there is a change on it, it will map the change which based on **DOM diff** to real dom automatically.
+
+
+
 ## Handling Events
 
 Handling events with React is very similar to handling events on DOM elements. There are some syntactic difference:
