fix typo errors

--- a/Notes/React/includes/markdown/01.MainConcepts.md
+++ b/Notes/React/includes/markdown/01.MainConcepts.md
@@ -2,8 +2,8 @@
 
 ## JSX
 
-JSX is javascript sugar for react. It is recommended being used in React to describe what the UI should look like.
-JSX may remind you of template languate, but **it comes with the full power of javascript**.
+JSX is javascript sugar for reactjs. It is recommended being used in React to describe what the UI should look like.
+JSX may remind you of template language, but **it comes with the full power of javascript**.
 JSX produces React 'element'.
 
 ### Embedding Expressions in JSX
@@ -40,7 +40,7 @@ const element = (
 
 Babel compiles JSX down to React.createElement() calls.
 
-These two are indentical:
+These two are identical:
 
 ```javascript
 const element = (
@@ -114,7 +114,7 @@ The render method will be called each time an update happen.
 
 ### Extracting Components
 
-**DRY** principle for create a component.
+The **DRY** principle to create a component.
 
 ### Props are Read-Only
 
@@ -128,7 +128,7 @@ function sum (a, b) {
 
 Such functions are called “pure” because they do not attempt to change their inputs, and always return the same result for the same inputs.
 
-In contrast, this function is impure because it changes its own input:
+In contrast, this function is impure because it changes its input:
 
 ```javascript
 function withdraw (account, amount) {
@@ -141,9 +141,9 @@ React is pretty flexible but it has a single strict rule:
 
 ## State and Lifecycle
 
-State is similar to props, but it is private and fully controlled by the component.
+The **state** is similar to **props**, but it is private and entirely controlled by the component of it.
 
-The differences bettween a pure function component and a **ES6** class component is that a function component doest not have state.
+The differences between a pure function component and an **ES6** class component is the function component does have a state.
 
 ```javascript
 import React, { Component } from 'react'
@@ -173,11 +173,11 @@ export default Tick
 
 ### Adding Lifecycle Methods to a Class
 
-The **componentDidMount()** hook runs after the component output has been rendered to the DOM.
+The **componentDidMount()** hook runs will execute when the component output renders to the DOM.
 
 In react, we use **this.setState()** to update a local state for a component.
 
-If the a component is ever removed from the DOM, React calls the **componentWillUnmount()** lifecycle hook so the timer is stopped.
+If the a component is ever removed from the DOM, React calls the **componentWillUnmount()** lifecycle hook, so the timer is stopped.
 
 ### Using State Correctly
 
@@ -203,7 +203,7 @@ this.setState((prevState, props) => ({
 
 ### The Data Flows Down
 
-This is commonly called a “top-down” or “unidirectional” data flow. Any state is always owned by some specific component, and any data or UI derived from that state can only affect components “below” them in the tree.
+*The Data Flows Down** is commonly called a “top-down” or “unidirectional” data flow. Any state is always owned by some specific component, and any data or UI derived from that state can only affect components “below” them in the tree.
 
 ## Understanding virtual dom and key property
 
@@ -211,11 +211,11 @@ This is commonly called a “top-down” or “unidirectional” data flow. Any 
 
 **Virtual dom** is the operation basic for JSx. For react component, it has a virtual dom which maps to real dom. Whenever there is a change on it, it will map the change which based on **DOM diff** to real dom automatically.
 
-
+**DOM diff** bases on **the breadth-first algorithm**.
 
 ## Handling Events
 
-Handling events with React is very similar to handling events on DOM elements. There are some syntactic difference:
+Handling events with React is very similar to handling events on DOM elements. There are some syntactic differences:
 
 - React events are named using camelCase, rather than lowercase.
 - With JSX you pass a function as the event handler, rather than a string.
@@ -237,7 +237,7 @@ function ActionClick () {
 
 Here, *e* is a synthetic event. React defines these synthetic events according to the W3C spec, so you don’t need to worry about cross-browser compatibility. See the <a href="https://reactjs.org/docs/events.html">SyntheticEvent</a> reference guide to learn more.</br>
 
-A fully example is <a href="../../src/components/Clock/index.js"> Clock Component</a>
+A full example is <a href="../../src/components/Clock/index.js"> Clock Component</a>
 
 ## Conditional Rendering
 
@@ -307,13 +307,13 @@ class ShoppingList extends Component {
 
 **Dont use index as a key. Not recomende. This can negatively impact in performance and may cause issues with component state.**
 
-Here is an in-depth explanation about <a href="https://reactjs.org/docs/reconciliation.html#recursing-on-children">why keys are necessary</a>   if you’re interested in learning more.
+Here is an in-depth explanation of <a href="https://reactjs.org/docs/reconciliation.html#recursing-on-children">why keys are necessary</a>   if you’re interested in learning more.
 
 ## Forms
 
 ## Lifting State Up
 
-## Composition vs Inheritance
+## Composition vs. Inheritance
 
 React has a powerful composition model, and we **recommend using composition** instead of inheritance to reuse code between components.
 
@@ -372,10 +372,10 @@ At Facebook, we use React in thousands of components, and we haven’t found any
 
 If you want to reuse non-UI functionality between components, we suggest extracting it into a separate JavaScript module. The components may import it and use that function, object, or a class, without extending it.
 
-## Thinkging in React
+## Thinking in React
 
 In this chapter, we’ll walk you through the thought process of building a searchable product data table using React.
 
-The **single responsibility principle**, that is, **a component should ideally do one thing**. If it ends up with growing, it should be decomponposed into smaller subcomponents. (https://en.wikipedia.org/wiki/Single_responsibility_principle)
+The **single responsibility principle**, that is, **a component should ideally do one thing**. If it ends up with growing, decompose it into smaller sub-components. (https://en.wikipedia.org/wiki/Single_responsibility_principle)
 
-An detailed example is here: https://reactjs.org/docs/thinking-in-react.html
+A detailed example is here: https://reactjs.org/docs/thinking-in-react.html
