--- a/Notes/React/includes/markdown/02.AdvancedGuides.md
+++ b/Notes/React/includes/markdown/02.AdvancedGuides.md
@@ -66,7 +66,7 @@ function ThemedButton(props) {
 
 **Context** is primarily used when some data needs to be accessible by many components at different nesting levels. Apply it sparingly because it makes component reuse more diffcult.
 
-**If you only want to avoid passing some props through many levels, component composition is often a simpler solution than context.**.
+**If you only want to avoid passing some props through many levels, the component composition is often a simpler solution than context**.
 
 ### 3.2 API of **Context**
 
@@ -86,7 +86,7 @@ The **Provider** accepts a *value* prop to be passed to Consumers that are desce
 <Consumer>
   {
     value => {
-      // do somthing with the value accepted from Provider of it.
+      // do something with the value accepted from Provider of it.
     }
   }
 </Consumer>
@@ -96,7 +96,7 @@ The **Provider** accepts a *value* prop to be passed to Consumers that are desce
 
 ### 3.4 Forwarding Refs to Context Consumers
 
-## Code spnitting
+## Code splitting
 
 Bundling is great, but as your app grows, your bundle will grow too.
 
@@ -121,8 +121,8 @@ import("./math").then(math => {
 })
 ```
 
-When Webpack comes across this syntax, it automatically starts code-splitting your app.
-If you’re using Create React App, this is already configured for you and you can start using it immediately.
+Webpack automatically provides code splitting for your app with **import API**.
+If you’re using **create-react-app**, it has code-splitting function by default.
 
 ### Libraries
 
@@ -249,7 +249,7 @@ Two ways for component reusing in **React** programming.
 
 ### A function used as a child component
 
-*MyComponent*'s defination:
+*MyComponent*'s definetion:
 
 ```javascript
 class MyComponent extends React.Component {
@@ -279,26 +279,25 @@ In the above example, the children of *MyComponent* is a function but not a Reac
 
 The parent component determines how to utilize the props passed from parent Component.
 
-A detailed demo and explaination pleas go to (https://time.geekbang.org/course/detail/100-9442)[https://time.geekbang.org/course/detail/100-9442].
+A detailed demo and explanation please go to (https://time.geekbang.org/course/detail/100-9442)[https://time.geekbang.org/course/detail/100-9442].
 
 ### Hight Order Component
 
 Concretely, **a higher-order component is a function that takes a component and returns a new component.**
 
-They adavatage of passing a function as a children into a Component is, the contorl of how to uitilize child component.
+Passing a function as **props.children** for a component enable we can control the child component in the place we use it.
 
 ```javascript
 const EnhancedComponent = higherOrderComponent(WrappedComponent)
 ```
 
-Whereas a component transforms props into UI, a higher-order component transforms a component into another component.
+A component passes props into UI, a higher-order component transforms a component into another component.
 
-HOC components provides bussiness logical to child compnent and it should  not have UI properties.
+HOC component provides business logic to a child component, it should not have UI properties by default.
 
-A detailed demo and explaination pleas go to (https://time.geekbang.org/course/detail/100-9442)[https://time.geekbang.org/course/detail/100-9442]
+A detailed demo and explanation, please go to (https://time.geekbang.org/course/detail/100-9442)[https://time.geekbang.org/course/detail/100-9442]
 
 ## API reference
-
 
 ### Overview
 
