six tips for react developer

--- a/Notes/React/includes/markdown/02.AdvancedGuides.md
+++ b/Notes/React/includes/markdown/02.AdvancedGuides.md
@@ -126,7 +126,7 @@ If you’re using **create-react-app**, it has code-splitting function by defaul
 
 ### Libraries
 
-<a href="https://github.com/jamiebuilds/react-loadable">React Loadable</a> wraps dynamic imports in a nice, React-friendly API for introducing code splitting into your app at a given component.
+[React Loadable](https://github.com/jamiebuilds/react-loadable)wraps dynamic imports in a nice, React-friendly API for introducing code splitting into your app at a given component.
 
 Before:
 
@@ -183,7 +183,23 @@ const App = () => (
 
 ## Optimizing Performance
 
-### Use the Production Build
+- Use the Production Build
+
+## Portals
+
+### API for Portals
+
+```javascript
+import ReactDOM from 'react-dom'
+
+ReactDOM.createPortal(child, container)
+```
+
+### Usage
+
+A typical use case for portals is when a parent component has an overflow: hidden or z-index style, but you need the child to visually “break out” of its container. For example, dialogs, hovercards, and tooltips.
+
+### Event Bubbling Through Portals
 
 ## Typechecking with PropTypes
 
@@ -279,7 +295,7 @@ In the above example, the children of *MyComponent* is a function but not a Reac
 
 The parent component determines how to utilize the props passed from parent Component.
 
-A detailed demo and explanation please go to (https://time.geekbang.org/course/detail/100-9442)[https://time.geekbang.org/course/detail/100-9442].
+A detailed demo and explanation please go to [https://time.geekbang.org/course/detail/100-9442](https://time.geekbang.org/course/detail/100-9442)
 
 ### Hight Order Component
 
@@ -295,12 +311,11 @@ A component passes props into UI, a higher-order component transforms a componen
 
 HOC component provides business logic to a child component, it should not have UI properties by default.
 
-A detailed demo and explanation, please go to (https://time.geekbang.org/course/detail/100-9442)[https://time.geekbang.org/course/detail/100-9442]
+A detailed demo and explanation, please go to [https://time.geekbang.org/course/detail/100-9442](https://time.geekbang.org/course/detail/100-9442)
 
 ## API reference
 
 ### Overview
-
 
 ## Refs and the DOM
 
